[package]
name = "advent_of_code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
bench = false

[dependencies]
rust-crypto = "*"
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
nom = "7.1.3"
itertools = "0.12.0"
